rust/macros/tests/invalid/target/debug/deps/single_argument-d227e6745b323e6e.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/single_argument-d227e6745b323e6e.d: single_argument.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libsingle_argument-d227e6745b323e6e.rmeta: single_argument.rs Cargo.toml

single_argument.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
